// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hamburger should render active&inactive states correctly 1`] = `
.emotion-3 {
  cursor: pointer;
  top: 0;
  z-index: 15;
  padding: 28px;
  box-sizing: border-box;
  width: 56px;
  height: 56px;
}

.emotion-3:hover {
  opacity: 0.6;
}

.emotion-2 {
  width: 1.625em;
  height: 1.625em;
  margin: -0.8125em 0 0 -0.8125em;
  padding: 0;
  top: 50%;
  left: 50%;
  -webkit-transition: -webkit-transform 1s cubic-bezier(0.23, 1, 0.32, 1),color 1s cubic-bezier(0.23, 1, 0.32, 1);
  transition: transform 1s cubic-bezier(0.23, 1, 0.32, 1),color 1s cubic-bezier(0.23, 1, 0.32, 1);
  -webkit-transform: translateZ(0);
  -moz-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  box-sizing: border-box;
  color: rgb(216, 216, 216);
}

.emotion-0 {
  width: 100%;
  height: 2px;
  top: 50%;
  position: absolute;
  margin-top: -0.75px;
  -webkit-transform: translateY(-3.75px) translateZ(0);
  -moz-transform: translateY(-3.75px) translateZ(0);
  -ms-transform: translateY(-3.75px) translateZ(0);
  transform: translateY(-3.75px) translateZ(0);
  -webkit-transition: -webkit-transform 1s cubic-bezier(0.23, 1, 0.32, 1),background-color 1s cubic-bezier(0.23, 1, 0.32, 1);
  transition: transform 1s cubic-bezier(0.23, 1, 0.32, 1),background-color 1s cubic-bezier(0.23, 1, 0.32, 1);
  background-color: rgb(216, 216, 216);
}

.emotion-0:last-child {
  -webkit-transform: translateY(3.75px) translateZ(0);
  -moz-transform: translateY(3.75px) translateZ(0);
  -ms-transform: translateY(3.75px) translateZ(0);
  transform: translateY(3.75px) translateZ(0);
}

<div
  className="emotion-3"
  onClick={null}
>
  <div
    className="emotion-2"
    color="alto"
  >
    <div
      className="emotion-0"
      color="alto"
    />
    <div
      className="emotion-0"
      color="alto"
    />
  </div>
</div>
`;

exports[`Hamburger should render active&inactive states correctly 2`] = `
.emotion-3 {
  cursor: pointer;
  top: 0;
  z-index: 15;
  padding: 28px;
  box-sizing: border-box;
  width: 56px;
  height: 56px;
}

.emotion-3:hover {
  opacity: 0.6;
}

.emotion-2 {
  width: 1.625em;
  height: 1.625em;
  margin: -0.8125em 0 0 -0.8125em;
  padding: 0;
  top: 50%;
  left: 50%;
  -webkit-transition: -webkit-transform 1s cubic-bezier(0.23, 1, 0.32, 1),color 1s cubic-bezier(0.23, 1, 0.32, 1);
  transition: transform 1s cubic-bezier(0.23, 1, 0.32, 1),color 1s cubic-bezier(0.23, 1, 0.32, 1);
  -webkit-transform: translateZ(0);
  -moz-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  box-sizing: border-box;
  color: #ffffff;
}

.emotion-0 {
  width: 100%;
  height: 2px;
  top: 50%;
  position: absolute;
  margin-top: -0.75px;
  -webkit-transform: translateY(-3.75px) translateZ(0);
  -moz-transform: translateY(-3.75px) translateZ(0);
  -ms-transform: translateY(-3.75px) translateZ(0);
  transform: translateY(-3.75px) translateZ(0);
  -webkit-transition: -webkit-transform 1s cubic-bezier(0.23, 1, 0.32, 1),background-color 1s cubic-bezier(0.23, 1, 0.32, 1);
  transition: transform 1s cubic-bezier(0.23, 1, 0.32, 1),background-color 1s cubic-bezier(0.23, 1, 0.32, 1);
  -webkit-transform: rotate(45deg) translateZ(0);
  -moz-transform: rotate(45deg) translateZ(0);
  -ms-transform: rotate(45deg) translateZ(0);
  transform: rotate(45deg) translateZ(0);
  background-color: #ffffff;
}

.emotion-0:last-child {
  -webkit-transform: translateY(3.75px) translateZ(0);
  -moz-transform: translateY(3.75px) translateZ(0);
  -ms-transform: translateY(3.75px) translateZ(0);
  transform: translateY(3.75px) translateZ(0);
}

.emotion-0:last-child {
  -webkit-transform: rotate(-45deg) translateZ(0);
  -moz-transform: rotate(-45deg) translateZ(0);
  -ms-transform: rotate(-45deg) translateZ(0);
  transform: rotate(-45deg) translateZ(0);
}

<div
  className="emotion-3"
  onClick={null}
>
  <div
    className="emotion-2"
    color="white"
  >
    <div
      className="emotion-0"
      color="white"
    />
    <div
      className="emotion-0"
      color="white"
    />
  </div>
</div>
`;
